# regressor_casos_dengue

./: .gitignore  CONTEXT.md  GUIA_PROJETO.md  IMPLEMENTACAO_LAGGED_TABLE.md  IMPLEMENTACAO_RUNNER_TREINO_VALIDACAO.md  README.md  dengue  pyproject.toml  roteiro.md
data/: AmostraDados.csv
src/dengue_tl/: __main__.py  encoder.py  experiment.py  lagged_table.py  matrix_windower.py  menu.py  model.py  paths.py  report_plots.py  scaler.py  sequence_windower.py  series_loader.py  train_runner.py  tune_runner.py  window_builder.py
src/dengue_tl/models/: __init__.py  cnn2d.py  cnn_lstm.py  efficientnet.py  mlp.py
src/dengue_tl/report/: __init__.py  __main__.py  artifacts.py  cli.py  comparacao.py  data_io.py  plots.py  tables.py
tests/: test_cnn2d.py  test_cnn_lstm.py  test_efficientnet.py  test_encoder.py  test_experiment.py  test_lagged_table.py  test_matrix_windower.py  test_menu.py  test_mlp.py  test_model.py  test_paths.py  test_report_artifacts.py  test_report_comparacao.py  test_report_data_io.py  test_report_plots.py  test_report_tables.py  test_scaler.py  test_sequence_windower.py  test_series_loader.py  test_train_runner.py  test_tune_runner.py  test_window_builder.py
