[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dengue-tl"
version = "0.1.0"
description = "Estimativa de casos de dengue com redes convolucionais/recorrentes (CNN-LSTM, CNN2D)"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]
# Relatório: tabelas e gráficos (`python -m dengue_tl.report`).
report = ["matplotlib"]
# Deep learning: instalado só quando for treinar (evita baixar TensorFlow para rodar o pipeline de dados).
dl = ["tensorflow"]
# Busca de hiperparâmetros (`python -m dengue_tl.tune_runner`); usar junto com `dl`.
opt = ["optuna"]

[tool.hatch.build.targets.wheel]
packages = ["src/dengue_tl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
